  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item The speed of \code{which} has been improved.
  \item The speed of \code{.Call} has been improved.
  \item New versions of the C matrix multiply functions are now used,
        which may be faster due to use of the C "restrict" keyword to
        allow better optimization.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  \item Subscripting with a logical vector is now faster for long vectors.
  \item General interpretive overhead has been reduced in some contexts,
        particularly when extracting or replacing subsets with 
        \code{[.]} or \code{[[.]]}.
  }}

  \subsection{FEATURE CHANGES}{
  \itemize{
  \item The \code{along}, \code{across}, and \code{down} forms of 
        the \code{for} statement (introduced in pqR-2016-06-24 and
        pqR-2016-10-05) now set the loop variable(s) to the
        corresponding length or dimension size when the loop is done
        zero times, rather than to \code{NULL}.
  \item Previously, when a scalar was extracted from a matrix or array 
        with \code{[]}, a name derived from a dimension name was attached
        to it only if a single dimension had names (though this was not 
        correctly documented by \code{help("[")}, and is not correctly
        documented in R Core versions to at least R-3.4.0).  This behaviour has
        been changed in pqR so that a name is attached when two dimensions
        have names provided one of these dimensions had dropping suppressed.
        This gives reliable results when matrices happen to have only one