@@ -1,0 +1,2 @@
+Speed up logical operators (!, &, |). 
+
